--- a/index.ipynb
+++ b/index.ipynb
@@ -54,11 +54,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "travel_month = \"January\""
+    "travel_month = \"January\"\n",
+    "Travel_"
    ]
   },
   {
