automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -127,7 +127,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "number_of_weeks = 5"
+    "number_of_weeks = 5\n",
+    "\n",
+    "I would like to trave"
    ]
   },
   {
