--- a/index.ipynb
+++ b/index.ipynb
@@ -129,7 +129,7 @@
    "source": [
     "number_of_weeks = 5\n",
     "\n",
-    "I would like to trave"
+    "I would like to travel in + travel_month "
    ]
   },
   {
