--- a/index.ipynb
+++ b/index.ipynb
@@ -123,22 +123,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-9-0f6f5ea5591a>, line 3)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-9-0f6f5ea5591a>\"\u001b[0;36m, line \u001b[0;32m3\u001b[0m\n\u001b[0;31m    I would like to travel in + travel_month + for + number_of_weeks\u001b[0m\n\u001b[0m          ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-     ]
+     "data": {
+      "text/plain": [
+       "'I would like to travel in + travel_month + for + number_of_weeks'"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "number_of_weeks = 5\n",
     "\n",
-    "I would like to travel in + travel_month + for + number_of_weeks"
+    "\"I would like to travel in + travel_month + for + number_of_weeks\""
    ]
   },
   {
