--- a/index.ipynb
+++ b/index.ipynb
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -132,7 +132,7 @@
        "'I would like to travel in + travel_month + for + number_of_weeks'"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -140,7 +140,8 @@
    "source": [
     "number_of_weeks = 5\n",
     "\n",
-    "\"I would like to travel in + travel_month + for + number_of_weeks\""
+    "\n",
+    "'I would like to travel in + travel_month + for + number_of_weeks\""
    ]
   },
   {
