--- a/index.ipynb
+++ b/index.ipynb
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -132,7 +132,7 @@
        "'I would like to travel in + travel_month + for + number_of_weeks'"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -141,7 +141,7 @@
     "number_of_weeks = 5\n",
     "\n",
     "\n",
-    "'I would like to travel in + travel_month + for + number_of_weeks\""
+    "str(I would like to travel in + travel_month + for + number_of_weeks'"
    ]
   },
   {
