--- a/index.ipynb
+++ b/index.ipynb
@@ -123,23 +123,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-15-ef8dc164a199>, line 4)",
+     "evalue": "invalid syntax (<ipython-input-17-fe767e31852c>, line 3)",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-15-ef8dc164a199>\"\u001b[0;36m, line \u001b[0;32m4\u001b[0m\n\u001b[0;31m    str(I would like to travel in + travel_month + for + number_of_weeks)\u001b[0m\n\u001b[0m              ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-17-fe767e31852c>\"\u001b[0;36m, line \u001b[0;32m3\u001b[0m\n\u001b[0;31m    I would like to travel in + travel_month  for + number_of_weeks)\u001b[0m\n\u001b[0m          ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
      ]
     }
    ],
    "source": [
     "number_of_weeks = 5\n",
     "\n",
-    "\n",
-    "str(I would like to travel in + travel_month + for + number_of_weeks)"
+    "I would like to travel in + travel_month  for + number_of_weeks)"
    ]
   },
   {
