automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -123,16 +123,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'I would like to travel in + travel_month  for + number_of_weeks'"
+       "'I would like to travel in travel_month  for  number_of_weeks'"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -140,7 +140,7 @@
    "source": [
     "number_of_weeks = 5\n",
     "\n",
-    "'I would like to travel in + travel_month  for + number_of_weeks'"
+    "'I would like to travel in travel_month  for  number_of_weeks'"
    ]
   },
   {
